test/classes/figueroa/BogusDestructors.good
BogusDestructors.chpl:9: error: ambiguous call 'C.deinit()'
BogusDestructors.chpl:4: note: candidates are: C.deinit()
BogusDestructors.chpl:7: note:                 C.deinit()
